[package]
name = "djed_yoga"
description = "Rust bindings for Facebook's Yoga, a Flexbox layout engine"
license = "MIT"
repository = "https://github.com/bschwind/yoga-rs"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
build = "build.rs"

[features]
default = []
serde_support = ["serde", "serde_derive", "ordered-float/serde"]

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0.62"

[dependencies]
djed_self_tokenize_macro = { git = "https://github.com/djedou/djed_self_tokenize.git"}
djed_self_tokenize_trait = { git = "https://github.com/djedou/djed_self_tokenize.git"}
ordered-float = "2.0.0"
serde = { version = "1.0.117", optional = true }
serde_derive = { version = "1.0.117", optional = true }
